Changed color and fixed text overflow

--- a/react-todo-hooks/src/Todo.css
+++ b/react-todo-hooks/src/Todo.css
@@ -1,17 +1,24 @@
     /* File: src/components/Todo.css */
 
     body {
-        background: rgb(255, 173, 65);
+        background: rgb(4, 77, 123);
+        /* flex-wrap: wrap; */
+        
+
     }
 
     .todo-container {
+        justify-content: center;
+        align-items: center;
+    
         background: rgb(41, 33, 33);
-        width: 40vw;
+        width: 60vw;
         margin: 10em auto;
         border-radius: 15px;
         padding: 20px 10px;
         color: white;
-        border: 3px solid rgb(36, 110, 194);
+        border: 3px solid rgb(255, 255, 255);
+        align-content: center;
     }
 
     .task {
@@ -19,17 +26,22 @@
         border-radius: 5px;
         padding: 0.5em;
         margin: 0.5em;
+        flex-wrap: wrap;
+        display: flex;
+        
     }
 
     .task button {
+        display: flex;
         background: rgb(12, 124, 251);
         border-radius: 5px;
-        margin: 0px 5px;
+        margin: 0px 2px;
         padding: 3px 5px;
         border: none;
         cursor: pointer;
         color: white;
         float: right;
+        
     }
 
     .header {
@@ -39,9 +51,13 @@
     }
 
     .create-task input[type=text] {
+        display: flex;
+
         margin: 2.5em 2em;
         width: 80%;
         outline: none;
         border: none;
         padding: 0.7em;
+        margin: auto;
+        align-self: center;
     }
